--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "ipfs-http-client": "^29.1.1",
+    "jquery": "^3.3.1",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
     "web3": "^1.0.0-beta.48"
   },
