--- a/ui/package.json
+++ b/ui/package.json
@@ -30,6 +30,8 @@
     "not op_mini all"
   ],
   "devDependencies": {
-    "gh-pages": "^2.0.1"
+    "eslint-plugin-prettier": "^3.0.1",
+    "gh-pages": "^2.0.1",
+    "prettier": "^1.16.4"
   }
 }
