--- a/ui/package.json
+++ b/ui/package.json
@@ -4,8 +4,12 @@
   "homepage": "http://dapplion.github.io/d4rm",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
     "ipfs-http-client": "^29.1.1",
+    "javascript-time-ago": "^2.0.1",
     "jquery": "^3.3.1",
+    "node-sass": "^4.11.0",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
