--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "cids": "^0.6.0",
     "ipfs-http-client": "^29.1.1",
     "javascript-time-ago": "^2.0.1",
     "jquery": "^3.3.1",
@@ -14,6 +15,7 @@
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.8",
+    "use-debounce": "^1.1.3",
     "web3": "1.0.0-beta.33"
   },
   "scripts": {
