--- a/ethereum-backend/package.json
+++ b/ethereum-backend/package.json
@@ -16,7 +16,10 @@
     "eth-sig-util": "1.4.2",
     "ethereumjs-tx": "^1.3.7",
     "ethereumjs-util": "^6.1.0",
+    "execa": "^1.0.0",
+    "request": "^2.88.0",
     "secp256k1": "^3.6.2",
+    "truffle-flattener": "^1.3.0",
     "truffle-privatekey-provider": "^1.1.0"
   }
 }
