--- a/relay/package.json
+++ b/relay/package.json
@@ -7,6 +7,7 @@
   },
   "license": "MIT",
   "dependencies": {
+    "dotenv": "^8.0.0",
     "ethereumjs-util": "^6.1.0",
     "express": "^4.16.4",
     "web3": "^1.0.0-beta.52"
